# python-promulgator

./: LICENSE  README.md  pyproject.toml  test.py
another_site/: .promulgator  index.md
another_site/wiki/: index.md
content/: .metadata  .promulgator
content/wiki/: .metadata
promulgator/: __imports.py  __init__.py  __main__.py  content_files.py  exceptions.py  promulgator.py  setup.py
test/: as_module.py  config_paths.py
